--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,32 +1,31 @@
-# .github/workflows/build.yml
-name: .NET Build and Release
+name: .NET Build for Windows 7
 
 on:
   push:
-    branches: [ "main" ] # 当代码推送到主分支时触发
-  workflow_dispatch: # 允许手动触发
+    branches: [ "main" ]
+  workflow_dispatch:
 
 jobs:
   build:
-    runs-on: windows-latest # 使用最新的Windows服务器进行编译
+    runs-on: windows-latest
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v4 # 第一步：下载你的代码
+      uses: actions/checkout@v4
 
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v4 # 第二步：安装 .NET 8 环境
+    - name: Setup .NET 6
+      uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: 8.0.x
+        dotnet-version: 6.0.x
 
     - name: Restore dependencies
-      run: dotnet restore # 第三步：恢复项目依赖（如HidSharp）
+      run: dotnet restore
 
-    - name: Publish application
-      run: dotnet publish -r win-x64 -c Release --self-contained true /p:PublishSingleFile=true /p:IncludeNativeLibrariesForSelfExtract=true # 第四步：执行编译和打包命令
+    - name: Publish for Win7-x86
+      run: dotnet publish -r win7-x86 -c Release --self-contained true /p:PublishSingleFile=true
       
-    - name: Upload artifact
-      uses: actions/upload-artifact@v4 # 第五步：上传编译好的.exe文件
+    - name: Upload Win7-x86 artifact
+      uses: actions/upload-artifact@v4
       with:
-        name: PMBus-Tool-Executable # 上传文件的名称
-        path: ./bin/Release/net8.0-windows/win-x64/publish/PMBusHidTool.exe # 要上传的.exe文件的路径
+        name: PMBus-Tool-Executable-Win7-32bit
+        path: ./bin/Release/net6.0-windows/win7-x86/publish/PMBusHidTool.exe
